tests/snapshots/aether/aether__aether__fbip_fail_nonfip_call__dump_aether.snap
---
source: tests/aether_cli_snapshots.rs
---
• 1 error • examples/aether/fbip_fail_nonfip_call.flx
error[E999]: FBIP Contract Failed

@fbip on `bounded` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown

  examples/aether/fbip_fail_nonfip_call.flx:7:7
  |
7 | @fbip fn bounded(f, x) {
  |       ^^^^^^^^^^^^^^^^^^
8 |     f(x)
  | ^^^^^^^^
9 | }
  | ^

Hint:
  Annotate only functions whose fresh allocations remain provably bounded.
